Refactor regex patterns and improve type checks across multiple classes